ajout du top banner

--- a/hello.html
+++ b/hello.html
@@ -9,9 +9,8 @@
 	</head>
     
     <body>
-       
        <!-- Titre -->
-       <div>
+       <div id="top-banner">
            Bienvenue dans cette formation git !
         </div>
     </body>
