--- a/hello.html
+++ b/hello.html
@@ -13,5 +13,8 @@
        <div id="top-banner">
            Bienvenue dans cette formation git !
         </div>
+		<div>
+		  <p> Je suis presque  parfait, mais je le suis dans le coeur de mon amoureux. </p>
+		</div>
     </body>
 </html>	
