ajout des titres

--- a/hello.html
+++ b/hello.html
@@ -13,8 +13,14 @@
        <div id="top-banner">
            Bienvenue dans cette formation git !
         </div>
+		<!-- description -->
 		<div>
-		  <p> Je suis presque  parfait, mais je le suis dans le coeur de mon amoureux. </p>
+		  <p> Je m'appelle Mélanie et c'est mon premier cours git </p>
+		</div>
+		<!-- récompense -->
+		<div>
+		  <h1> Mes récompense </h1>
+		  <p> en construction ... </p>
 		</div>
     </body>
 </html>	
