#2: ajout medaille bronze

--- a/hello.html
+++ b/hello.html
@@ -13,8 +13,20 @@
        <div id="top-banner">
            Bienvenue dans cette formation git !
         </div>
+		<!-- description -->
 		<div>
-		  <p> Je suis presque  parfait, mais je le suis dans le coeur de mon amoureux. </p>
+		<h1> Ma description </h1>
+		  <p> Bonjour, je m'appelle Mélanie et je suis ce cours git </p>
+		</div>
+		<!-- récompense -->
+		<div>
+		<h1> Mes récompenses </h1>
+		  <p> <img src="images\medal_bronze.png"> </p>
+		</div>
+		<!-- mon gist -->
+		<div>
+		<h1> Mon gist </h1>
+		  <p> <script src="https://gist.github.com/mon_site_web.git"></script> </p>
 		</div>
     </body>
 </html>	
