--- a/hello.html
+++ b/hello.html
@@ -28,5 +28,13 @@
 		<h1> Mon gist </h1>
 		  <p> <script  src="https://gist.github.com/melform/1df74d0383c2de4996d43596a5409ba2.js"></script> </p>
 		</div>
+		</div>
+		<!-- commandes git -->
+		<div>
+		<h1> Mes commandes git </h1>
+		<p> git pull </p>
+		<p> git push </p>
+		<p> git log </p>
+		</div>
     </body>
 </html>	
